# mobile-appsec-platform

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
analyzers/: __init__.py  patterns.py  safe_zip.py
analyzers/adapters/: __init__.py  binary_analysis.py  mobsf.py
analyzers/android/: __init__.py  scanner.py
analyzers/android/external_tools/: __init__.py  jadx.py  models.py
analyzers/android/tests/: __init__.py  test_jadx_adapter.py  test_scanner.py
analyzers/ios/: __init__.py  scanner.py
analyzers/ios/tests/: __init__.py  test_scanner.py
analyzers/tests/: test_safe_zip.py
backend/: README.md  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  rate_limiter.py
backend/app/db/: __init__.py  database.py
backend/app/errors/: __init__.py  exceptions.py  handlers.py
backend/app/models/: comparison.py  error.py  report.py  scan.py  scan_history.py
backend/app/services/: policy_evaluator.py  report_builder.py  scan_comparison.py  scan_history.py  scan_jobs.py  upload_validator.py
backend/tests/: conftest.py  test_binary_analysis_adapter.py  test_config.py  test_mobsf_adapter.py  test_policy_evaluator.py  test_report_builder_android.py  test_report_builder_ios.py  test_report_schema.py  test_report_scoring.py  test_scan_comparison.py  test_scan_history.py  test_scan_jobs.py  test_stabilization_regressions.py
frontend/: next.config.mjs  package-lock.json  package.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  report-export.ts  report-types.ts
(+7 files in other folders)
